--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,12 +45,12 @@ body {
 }
 
 a {
-  color: #d42aff;
+  color: rgba(123, 99, 184);
   text-decoration: none;
 }
 
 a:hover {
-  color: rgba(116, 255, 232, 0.8);
+  color: rgba(84, 159, 176 );
   transition: 0.3s;
   text-decoration: none;
 }
@@ -74,7 +74,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #d42aff;
+  background: rgba(123, 99, 184);
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -88,7 +88,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #2eafec;
+  background: rgba(84, 159, 176 );
   color: #fff;
 }
 
@@ -153,7 +153,7 @@ h6 {
 }
 
 #header .profile .social-links a:hover {
-  background: #d42aff;
+  background: rgba(123, 99, 184);
   color: #fff;
   text-decoration: none;
 }
@@ -221,7 +221,7 @@ h6 {
 .nav-menu .active i,
 .nav-menu .active:focus i,
 .nav-menu li:hover>a i {
-  color: #d42aff;
+  color: rgba(123, 99, 184);
 }
 
 /* Mobile Navigation */
@@ -234,7 +234,7 @@ h6 {
   font-size: 24px;
   transition: all 0.4s;
   outline: none !important;
-  background-color: #d42aff;
+  background-color: rgba(123, 99, 184);
   color: #fff;
   width: 40px;
   height: 40px;
@@ -306,10 +306,10 @@ p{
  /* color: #fff;
   padding-bottom: 4px;
   letter-spacing: 1px;
-  border-bottom: 3px solid #d42aff;*/
+  border-bottom: 3px solid rgba(123, 99, 184);*/
   text-align:center;
   border-bottom: 3px solid transparent;
-  border-image: linear-gradient(0.25turn, rgba(116, 255, 232, 0.8), rgba(116, 255, 232, 0.8), rgba(195, 0, 255,0.8), rgba(195, 0, 255,0.8));
+  border-image: linear-gradient(0.25turn, rgba(84, 159, 176 ), rgba(84, 159, 176 ), rgba(123, 99, 184), rgba(123, 99, 184));
   border-image-slice: 1;
   width:100%;
 }
@@ -368,7 +368,7 @@ section {
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
-  color: rgba(116, 255, 232, 0.8);
+  color: rgba(84, 159, 176 );
 }
 
 .section-title h2::after {
@@ -377,7 +377,7 @@ section {
   display: block;
   width: 50px;
   height: 3px;
-  background: #d42aff;
+  background: rgba(123, 99, 184);
   bottom: 0;
   left: 0;
 }
@@ -397,7 +397,7 @@ section {
 .about .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color:rgba(116, 255, 232, 0.8);
+  color:rgba(84, 159, 176 );
 }
 
 .about .content ul {
@@ -418,7 +418,7 @@ section {
 .about .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #d42aff;
+  color: rgba(123, 99, 184);
   line-height: 0;
 }
 
@@ -443,7 +443,7 @@ section {
 .facts .count-box i {
   display: block;
   font-size: 44px;
-  color: #d42aff;
+  color: rgba(123, 99, 184);
   float: left;
   line-height: 0;
 }
@@ -476,7 +476,7 @@ section {
 }
 
 .facts .count-box a:hover {
-  color: #1f5297;
+  color: rgba(84, 159, 176 );
   transition: 1s;
 }
 
@@ -519,7 +519,7 @@ section {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #da46ff;
+  background-color: rgba(123, 99, 184);
 }
 
 /*--------------------------------------------------------------
@@ -535,13 +535,13 @@ section {
   font-weight: 700;
   margin-top: 20px;
   margin-bottom: 20px;
-  color: #cfcfcf;
+  color: white;
 }
 
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
-  border-left: 2px solid #1f5297;
+  border-left: 2px solid rgba(84, 159, 176 );
   position: relative;
 }
 
@@ -551,7 +551,7 @@ section {
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  color: #da46ff;
+  color: rgba(123, 99, 184);
   margin-bottom: 10px;
 }
 
@@ -583,7 +583,7 @@ section {
   left: -9px;
   top: 0;
   background: #fff;
-  border: 2px solid #1f5297;
+  border: 2px solid rgba(84, 159, 176 );
 }
 
 /*--------------------------------------------------------------
@@ -618,7 +618,7 @@ section {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  color: #d42aff;
+  color: rgba(123, 99, 184);
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -708,11 +708,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #d42aff;
+  border: 1px solid rgba(123, 99, 184);
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #d42aff;
+  background-color: rgba(123, 99, 184);
 }
 
 .portfolio-details .portfolio-info {
@@ -771,10 +771,10 @@ section {
   justify-content: center;
   width: 54px;
   height: 54px;
-  background: #d42aff;
+  background: rgba(123, 99, 184);
   border-radius: 50%;
   transition: 0.5s;
-  border: 1px solid #d42aff;
+  border: 1px solid rgba(123, 99, 184);
 }
 
 .services .icon i {
@@ -788,7 +788,7 @@ section {
 }
 
 .services .icon-box:hover .icon i {
-  color: #d42aff;
+  color: rgba(123, 99, 184);
 }
 
 .services .title {
@@ -803,7 +803,7 @@ section {
 }
 
 .services .title a:hover {
-  color: #d42aff;
+  color: rgba(123, 99, 184);
 }
 
 .services .description {
@@ -897,11 +897,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #d42aff;
+  border: 1px solid rgba(123, 99, 184);
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #d42aff;
+  background-color: rgba(123, 99, 184);
 }
 
 /*--------------------------------------------------------------
@@ -921,7 +921,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #d42aff;
+  color: rgba(123, 99, 184);
   float: left;
   width: 44px;
   height: 44px;
@@ -972,14 +972,14 @@ section {
 }
 
 .contact .info .social-links a:hover {
-  background: #d42aff;
+  background: rgba(123, 99, 184);
   color: #fff;
 }
 
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #d42aff;
+  background: rgba(123, 99, 184);
   color: #fff;
 }
 
@@ -1066,7 +1066,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #d42aff;
+  background: rgba(123, 99, 184);
   border: 0;
   padding: 10px 24px;
   transition: 0.4s;
