--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,14 +10,6 @@
 # Nuevas
 --------------------------------------------------------------*/
 
-.nombre{
-  background-image: linear-gradient(
-    180deg, rgb(143, 223, 255), rgb(0, 132, 184), 
-  );
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-}
 
 navbar::-webkit-scrollbar {
   display: none;
@@ -282,7 +274,7 @@ h6 {
 }
 
 #hero h1 {
-  margin: 0 0 20px 100px;
+  /*margin: 0 0 20px 100px;*/
   font-size: 70px;
   font-weight: 700;
   line-height: 56px;
@@ -330,7 +322,7 @@ p{
   #hero h1 {
     font-size: 28px;
     line-height: 36px;
-    margin-left: 10px;
+   /* margin-left: 10px;*/
   }
 
   #hero h2 {
