--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,7 +287,7 @@ p{
 }
 
 #hero p {
-  /*margin: 0 0 20px 100px;*/
+  margin: 0 0 10px 50px;
   color: #fff;
   margin-bottom: 50px;
   font-size: 36px;
