--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -328,7 +328,12 @@ p{
   #hero h1 {
     font-size: 28px;
     line-height: 36px;
+    margin: 5px 5px 5px 5px;
    /* margin-left: 10px;*/
+  }
+
+  .ima{
+    margin: 1px -20px 0 0;
   }
 
   #hero h2 {
@@ -338,8 +343,9 @@ p{
   }
 
   #hero p{
-    font-size: 22px;
-    margin: 5px 5px 5px 5px;
+    font-size: 28px;
+      margin: 50px -80px 0 0;
+    
     position: absolute;
   }
 }
@@ -596,7 +602,7 @@ section {
   margin: 0 auto 35px auto;
   list-style: none;
   text-align: center;
-  background: #fff;
+  background: #464646;
   border-radius: 50px;
   padding: 2px 15px;
 }
@@ -604,19 +610,19 @@ section {
 .portfolio #portfolio-flters li {
   cursor: pointer;
   display: inline-block;
-  padding: 10px 15px 8px 15px;
-  font-size: 14px;
-  font-weight: 600;
+  padding: 10px 12px 5px 12px;
+  font-size: 16px;
+  font-weight: 900;
   line-height: 1;
   text-transform: uppercase;
-  color: #272829;
+  color: black;
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
 }
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  color: rgba(123, 99, 184);
+  color: rgb(84, 159, 176);
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -624,15 +630,20 @@ section {
 }
 
 .portfolio .portfolio-wrap {
+  margin:30px;
   transition: 0.3s;
   position: relative;
   overflow: hidden;
   z-index: 1;
+  padding-bottom: 15px;
+  border-bottom: 1px solid white;
+  
+  
 }
 
 .portfolio .portfolio-wrap::before {
   content: "";
-  background: rgba(255, 255, 255, 0.5);
+  
   position: absolute;
   left: 0;
   right: 0;
@@ -829,8 +840,8 @@ section {
 }
 
 .testimonials .testimonial-item .testimonial-img {
-  width: 120px;
-  height: 120px;
+  width: 350px;
+
 
   margin: 0 auto;
 }
@@ -1185,3 +1196,14 @@ section {
 .blanco{
   color:white !important;
 }
+
+.grisclaro{
+  color:rgb(192, 192, 192) !important;
+}
+
+.texto-portfolio{
+  margin-top: 10px;
+  font-size: 20px;
+  color:white !important;
+}
+
