--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -825,26 +825,19 @@ section {
 /*--------------------------------------------------------------
 # Testimonials
 --------------------------------------------------------------*/
-.testimonials{
-  color: white;
-}
-
-.testimonials .testimonials-carousel,
-.testimonials .testimonials-slider {
-  overflow: hidden;
-}
-
 .testimonials .testimonial-item {
-  box-sizing: content-box;
+  box-sizing: border-box;
   text-align: center;
-  min-height: 320px;
+  max-width: 100%; /* Allows the container to be full width */
+  margin: 40px auto; /* Adds vertical spacing between items */
+  padding: 20px;
 }
 
 .testimonials .testimonial-item .testimonial-img {
-  width: 350px;
-
-
-  margin: 0 auto;
+  width: 100%; /* Makes image responsive */
+  max-width: 900px; /* Allows for a larger display of images */
+  margin: 0 auto 20px; /* Centers the image with bottom spacing */
+  display: block;
 }
 
 .testimonials .testimonial-item h3 {
@@ -860,42 +853,23 @@ section {
   margin: 0;
 }
 
-.testimonials .testimonial-item .quote-icon-left,
-.testimonials .testimonial-item .quote-icon-right {
-  color: #c3e8fa;
-  font-size: 26px;
-}
-
-.testimonials .testimonial-item .quote-icon-left {
-  display: inline-block;
-  left: -5px;
-  position: relative;
-}
-
-.testimonials .testimonial-item .quote-icon-right {
-  display: inline-block;
-  right: -5px;
-  position: relative;
-  top: 10px;
-}
-
 .testimonials .testimonial-item p {
   font-style: italic;
   font-weight: bolder;
   margin: 0 15px 15px 15px;
-  padding: 20px;
+  padding: 35px;
   background: rgba(123, 99, 184);
   position: relative;
   margin-bottom: 35px;
   border-radius: 6px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 15px rgba(255, 255, 255, 0.1);
 }
 
 .testimonials .testimonial-item p::after {
   content: "";
   width: 0;
   height: 0;
-  border-top: 20px solid #fff;
+  border-top: 20px solid rgba(123, 99, 184);
   border-right: 20px solid transparent;
   border-left: 20px solid transparent;
   position: absolute;
@@ -919,6 +893,8 @@ section {
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
   background-color: rgba(123, 99, 184);
 }
+
+
 
 /*--------------------------------------------------------------
 # Contact
